fix: fix header z-index issue

--- a/src/styles/plugins/_ngx-toastr.scss
+++ b/src/styles/plugins/_ngx-toastr.scss
@@ -27,7 +27,7 @@
   }
 
   .toast-info {
-    background-color: #009688;
+    background-color: #2196F3;
   }
 
   .toast-warning {
