--- a/src/styles/theme/_header.scss
+++ b/src/styles/theme/_header.scss
@@ -5,7 +5,7 @@
 .matero-header {
   display: block;
   position: relative;
-  z-index: 2;
+  z-index: 9;
 }
 
 .matero-toolbar {
